add recommended listings for users api
